@startuml class
hide circle

skinparam classAttributeIconSize 0
skinparam Linetype ortho

skinparam class {
    BorderColor DarkGreen
    ArrowColor DarkGreen
}

class User {
  #id: int
  #username: string
  #email: string
  #password: string
  #role: string
  #status: string
  +register()
  +login()
  +logout()
}

class volunteer {
  -participatioHistory: list
  +achievementSation()
}

class Organization {
  -publishedOpportunities: list
  +OpportunityManagement()
}

class Admin {
  +Usermanagement()
  +superviserOpportunitys()
  +analyserStatistics()
  +contentModeration()
}

class Opportunity {
  -id: int
  -title: string
  -description: string
  -location: string
  -duration: string
  +createOpportunity()
  +editOpportunity()
  +deleteOpportunity()
}

class Candidature {
  -id: int
  -status: string
  -submissionDate: date
  +apply()
  +accept()
  +refuse()
}

class Statistics {
  -numbervolunteers: int
  -numberOpportunities: int
  +generateRapport()
}

class Message {
  -id: int
  -content: string
  +sendMessage()
}

class Donation {
  -id: int
  -description: string
  -status: string
  +postDonation()
  +editDonation()
  +deleteDonation()
}

User <|-- volunteer
User <|-- Organization
User <|-- Admin
User "1" --> "*" Message 

volunteer --> Donation 
volunteer "1" --* "*" Candidature
volunteer "*" --> "*" Opportunity 

Organization "1" --> "*" Opportunity
Organization "1" --> "1" Statistics 
Organization "1" --> "*" Donation 

Admin "1" --> "1" Statistics  
Admin "1" --> "*" Opportunity 

Candidature "*" --> "1" Opportunity 

@enduml
